Add internatinalization in action classes

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -104,3 +104,41 @@ logout.info= Sie haben sich erfolgreich abgemeldet
 logout.seeyou= Bis bald!
 registration.Step1=Herzlichen Glückwunsch! Sie haben den ersten Schritt zur Registrierung in der Seminarverwaltung der Nordakademie abgeschlossen!
 registration.email=Wir haben Ihnen einen Link zugeschickt. Öffnen Sie diesen bitte, um die Registrierung abzuschließen.
+question.single=Einfache Wahl
+question.multiple=Mehrfachwahl
+question.cloze=Lückentext
+questionFieldError.points=Bitte wählen Sie eine Punktzahl >0
+questionFieldError.texts=Bitte geben Sie einen Text ein
+questionFieldError.answers=Bitte geben Sie einen Text für die Antworten an
+loginFieldError.mail= Bitte geben Sie ihre Mailadresse an
+loginFieldError.nak= Bitte geben Sie eine Nordakademie Mailadresse an
+loginFieldError.mailValid=Bitte geben Sie eine gültige Mailadresse an
+loginFieldError.activation=Bitte aktivieren Sie ihren Account mit dem Bestätigungslink, den Sie per Mail erhalten haben
+loginFieldError.validPassword=Bitte geben Sie ein gültiges Passwort ein
+loginFieldError.wrongPassword=Das eingegebene Passwort ist falsch
+performTestFieldError.token=Das Token ist inkorrekt
+persistSeminarFieldError.validStart=Bitte geben Sie ein gültiges Startdatum an
+persistSeminarFieldError.validEnd=Bitte geben Sie ein gültiges Enddatum an
+persistSeminarFieldError.startInPast=Bitte geben Sie ein Startdatum in der Gegenwart an
+persistSeminarFieldError.startBeforeEnd=Bitte geben Sie ein Enddatum nach dem Startdatum an
+persistSeminarFieldError.description=Bitte geben Sie eine Seminarbeschreibung an
+persistSeminarFieldError.maxParticipants=Bitte geben Sie eine Anzahl an Teilnehmern >0 an
+persistSeminarFieldError.name=Bitte geben Sie einen Seminarnamen an
+persistTestFieldError.validStart=Bitte geben Sie ein gültiges Startdatum an
+persistTestFieldError.validEnd=Bitte geben Sie ein gültiges Enddatum an
+persistTestFieldError.startInPast=Bitte geben Sie ein Startdatum in der Gegenwart an
+persistTestFieldError.startBeforeEnd=Bitte geben Sie ein Enddatum nach dem Startdatum an
+persistTestFieldError.duration=Bitte geben Sie eine gültige Dauer an
+persistTestFieldError.minScore=Bitte geben Sie eine Mindestpunktzahl >0 an
+registrationMail.subjectLine=Ihre Regestrierung am Nordakademie Seminartool
+registrationMail.textBeginning=<p>Vielen Dank für Ihre Regestrierung am Nordakademie Seminartool. Öffnen Sie biete den folgenden Link, um die Registierung abzuschließen</p>
+registrationMail.textEnding=<p>Wenn Sie denn Link nicht direkt öffnen können, versuchen Sie diesen in einen Browser zu kopieren.</p>
+registrationMail.textGreeting=<p>Mit freundlichen Grüßen,</p>
+registrationMail.textSignature= <p>Ihr Nordakademie Seminartool</p>
+registrationFieldError.firstName=Bitte geben Sie Ihren Vornamen an
+registrationFieldError.lastName=Bitte geben Sie Ihren Nachnamen an
+registrationFieldError.mail=Bitte geben Sie Ihre Mailadresse an
+registrationFieldError.nakMail=Bitte geben Sie eine Nordakademie Mailadresse an
+registrationFieldError.mailRegistrated=Diese Mailadresse ist bereits angemeldet
+registrationFieldError.passwordLen=Bitte geben Sie ein Passwort mit mindestens 8 Zeichen an
+registrationFieldError.passwordCriteria=Bitte wählen Sie ein Passwort, welches mindestens drei der erwähnten Kriterien erfüllt
