--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -102,3 +102,41 @@ logout.info= Your logout was successful
 logout.seeyou= See you soon!
 registration.Step1=Congratulations! You finished the first step of registration
 registration.email=We have sent you an email. Please open the link to confirm your registration.
+question.single=Single Choice
+question.multiple=Multiple Choice
+question.cloze=Cloze Text
+questionFieldError.points=Please choose an amount of points >0
+questionFieldError.texts=Please enter a question text
+questionFieldError.answers=Please add a text to your answers
+loginFieldError.mail= Please enter your mail address
+loginFieldError.nak= Please enter a Nordakademie mail address
+loginFieldError.mailValid=Please enter a valid mail address
+loginFieldError.activation=Please use the confirmation link set by mail, in order to activate your account
+loginFieldError.validPassword=Please enter a valid password
+loginFieldError.wrongPassword=The entered password is incorrect
+performTestFieldError.token=The token is incorrect
+persistSeminarFieldError.validStart=Please enter a valid start date
+persistSeminarFieldError.validEnd=Please enter a valid end date
+persistSeminarFieldError.startInPast=Please enter start date, which is not in the past
+persistSeminarFieldError.startBeforeEnd=Please enter an end date following the start date
+persistSeminarFieldError.description=Please enter a description to the seminar
+persistSeminarFieldError.maxParticipants=Please enter a maximum amount of participants >0
+persistSeminarFieldError.name=Please enter a name for the seminar
+persistTestFieldError.validStart=Please enter a valid start date
+persistTestFieldError.validEnd=Please enter a valid end date
+persistTestFieldError.startInPast=Please enter start date, which is not in the past
+persistTestFieldError.startBeforeEnd=Please enter an end date following the start date
+persistTestFieldError.duration=Please enter a valid duration
+persistTestFieldError.minScore=Please enter a minimum score >0
+registrationMail.subjectLine=Your registration at the Nordakademie Seminartool
+registrationMail.textBeginning=<p>Thank you for registering at the Nordakademie Seminartool. Please open the following link to complete your registration</p>
+registrationMail.textEnding=<p>If you cant open the link directly, try to copy and paste it directly into your browser.</p>
+registrationMail.textGreeting=<p>Yours sincerely,</p>
+registrationMail.textSignature= <p>The Nordakademie Seminartool</p>
+registrationFieldError.firstName=Please enter your firstname
+registrationFieldError.lastName=Please enter your lastname
+registrationFieldError.mail=Please enter your mail address
+registrationFieldError.nakMail=Please enter a Nordakademie mail address
+registrationFieldError.mailRegistrated=This mail address is already registrated
+registrationFieldError.passwordLen=Please enter a password with at least 8 symbols
+registrationFieldError.passwordCriteria=Please choose a password, fulfilling at least 3 of the mentioned criterias
