Update enumeration translation

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -142,3 +142,4 @@ registrationFieldError.nakMail=Bitte geben Sie eine Nordakademie Mailadresse an
 registrationFieldError.mailRegistrated=Diese Mailadresse ist bereits angemeldet
 registrationFieldError.passwordLen=Bitte geben Sie ein Passwort mit mindestens 8 Zeichen an
 registrationFieldError.passwordCriteria=Bitte wählen Sie ein Passwort, welches mindestens drei der erwähnten Kriterien erfüllt
+question.answer=Antwort
