--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -7,6 +7,8 @@ global.clickHereLink=here
 home.notLoggedIn.info=Welcome to the Seminar Administration Tool of the Nordakademie. It is used for enrolling for Seminars, passing exams and monitoring your personal credit point overview.
 home.loggedIn.infoStudent=You can find a list of all Seminars for which you are enrolled below.
 home.loggedIn.testInfoStudent=As soon as a Lecturer activates a test for a seminar you can start the test by pressing the appearing button.
+home.loggedIn.emptyListStudent=You aren't registrated for a seminar at this moment, please enroll in a seminar first.
+home.loggedIn.emptyListLecturer=You aren't listed for a seminar, please create on seminar first.
 home.StartTestButton=start test
 home.add-testButton=add test
 home.EditTestButton=edit test
