add an administration site

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -145,3 +145,7 @@ registrationFieldError.mailRegistrated=Diese Mailadresse ist bereits angemeldet
 registrationFieldError.passwordLen=Bitte geben Sie ein Passwort mit mindestens 8 Zeichen an
 registrationFieldError.passwordCriteria=Bitte wählen Sie ein Passwort, welches mindestens drei der erwähnten Kriterien erfüllt
 question.answer=Antwort
+applicationAdministration.title=Andwendungsadministration
+applicationAdministration.quantLecturer=Anzahl Dozenten
+applicationAdministration.quantStudent=Anzahl Studenten
+applicationAdministration.infoText=Anschließend könenn Sie sich wie folgt am System anmelden: Blabla@nordakademie.de PW:"JiippieJeah Schweine backe". Alle anderen Daten wurden durch einen Zufallsgesteuerten Prozess erzeugt.
