--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -142,3 +142,8 @@ registrationFieldError.nakMail=Please enter a Nordakademie mail address
 registrationFieldError.mailRegistrated=This mail address is already registrated
 registrationFieldError.passwordLen=Please enter a password with at least 8 symbols
 registrationFieldError.passwordCriteria=Please choose a password, fulfilling at least 3 of the mentioned criterias
+question.answer=Answer
+applicationAdministration.title=Application administration
+applicationAdministration.quantLecturer=Number of Lecturers
+applicationAdministration.quantStudent=Number of Students
+applicationAdministration.infoText=EN TEXT : Anschließend könenn Sie sich wie folgt am System anmelden: Blabla@nordakademie.de PW:"JiippieJeah Schweine backe". Alle anderen Daten wurden durch einen Zufallsgesteuerten Prozess erzeugt.
