--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -147,3 +147,13 @@ applicationAdministration.title=Application administration
 applicationAdministration.quantLecturer=Number of Lecturers
 applicationAdministration.quantStudent=Number of Students
 applicationAdministration.infoText=EN TEXT : Anschließend könenn Sie sich wie folgt am System anmelden: Blabla@nordakademie.de PW:"JiippieJeah Schweine backe". Alle anderen Daten wurden durch einen Zufallsgesteuerten Prozess erzeugt.
+home.title=Home
+seminarDetail.title=Seminar details
+seminarDetail.name=Seminar name
+seminarDetail.period=Startdate - Enddate
+seminarDetail.lecturer=Lecturer
+seminarDetail.description=Description
+seminarDetail.participants=Participants
+seminarDetail.noParticipants=No student is currently enrolled
+seminarDetail.enrolled=You are already enrolled
+seminarDetail.seminarFull=The seminar is full
