--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -149,3 +149,13 @@ applicationAdministration.title=Andwendungsadministration
 applicationAdministration.quantLecturer=Anzahl Dozenten
 applicationAdministration.quantStudent=Anzahl Studenten
 applicationAdministration.infoText=Anschließend könenn Sie sich wie folgt am System anmelden: Blabla@nordakademie.de PW:"JiippieJeah Schweine backe". Alle anderen Daten wurden durch einen Zufallsgesteuerten Prozess erzeugt.
+home.title=Home
+seminarDetail.title=Seminar Details
+seminarDetail.name=Seminar Name
+seminarDetail.period=Startdatum - Enddatum
+seminarDetail.lecturer=Dozent
+seminarDetail.description=Beschreibung
+seminarDetail.participants=Teilnehmer
+seminarDetail.noParticipants=Bisher sind keine Studenten angemeldet
+seminarDetail.enrolled=Sie sind bist bereits angemeldet
+seminarDetail.seminarFull=Das Seminar ist bereits voll
