Implement Add SingleChoice answer

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -142,6 +142,10 @@ registrationFieldError.nakMail=Please enter a Nordakademie mail address
 registrationFieldError.mailRegistrated=This mail address is already registrated
 registrationFieldError.passwordLen=Please enter a password with at least 8 symbols
 registrationFieldError.passwordCriteria=Please choose a password, fulfilling at least 3 of the mentioned criterias
+
+questionType.single=one correct answer
+questionType.multiple=multiple correct answers
+questionType.cloze=cloze text
 question.answer=Answer
 applicationAdministration.title=Application administration
 applicationAdministration.quantLecturer=Number of Lecturers
