--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -20,7 +20,7 @@ home.startTest= starte den Test
 home.AdministrateTest= Test verwalten
 add-test.title=Test Hinzuf&uuml;gen
 edit-test.title=Test editieren
-editTest.addQuestionButton=Fragen hinzuf&uuml;gen
+editTest.addQuestionButton=Frage hinzuf&uuml;gen
 editTest.info=Die Fragen zum Test hinzuf&uuml;gen:
 test.selectSeminar=Seminar
 test.selectCredits=Credits
@@ -145,6 +145,10 @@ registrationFieldError.mailRegistrated=Diese Mailadresse ist bereits angemeldet
 registrationFieldError.passwordLen=Bitte geben Sie ein Passwort mit mindestens 8 Zeichen an
 registrationFieldError.passwordCriteria=Bitte wählen Sie ein Passwort, welches mindestens drei der erwähnten Kriterien erfüllt
 question.answer=Antwort
+
+questionType.single=Eine korrekte Antwort
+questionType.multiple=Mehrere korrekte Antworten
+questionType.cloze=Lückentext
 applicationAdministration.title=Andwendungsadministration
 applicationAdministration.quantLecturer=Anzahl Dozenten
 applicationAdministration.quantStudent=Anzahl Studenten
