change layout of question list on edittest page

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -20,6 +20,9 @@ home.startTest= starte den Test
 home.AdministrateTest= Test verwalten
 add-test.title=Test Hinzuf&uuml;gen
 edit-test.title=Test editieren
+editTest.addQuestionButton=Fragen hinzuf&uuml;gen
+editTest.TableHeaderPos= Position der Frage im Test
+editTest.TableHeaderText=Frage
 editTest.addQuestionButton=Frage hinzuf&uuml;gen
 editTest.info=Die Fragen zum Test hinzuf&uuml;gen:
 test.selectSeminar=Seminar
