--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -21,6 +21,9 @@ add-test.title=Create a Test
 edit-test.title=Edit a Test
 editTest.addQuestionButton=add question
 editTest.info=the test question could be add here.
+editTest.QuestionList=this are all existing questions for the test
+editTest.TableHeaderPos= question position
+editTest.TableHeaderText=question
 test.selectSeminar=Seminar
 test.selectCredits=Credits
 test.selectStartdate=Startdate
