Add question validation, and seminar-detail design changes

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -57,7 +57,7 @@ addQuestion-form.title=Add Question
 addQuestion-form.typeOfQuestion=Type of question
 addQuestion-form.points=Points
 addQuestion-form.question=Question
-addQuestion-form.answer1=Answer 1
+addQuestion-form.answer=Answer
 addQuestion-form.position=Position
 frameHeader.systemName=Examinationsystem
 frameHeader.linkHome=Home
@@ -113,6 +113,8 @@ question.cloze=Cloze Text
 questionFieldError.points=Please choose an amount of points >0
 questionFieldError.texts=Please enter a question text
 questionFieldError.answers=Please add a text to your answers
+questionFieldError.gapAnswers=Please add at least one gap
+questionFieldError.correctAnswers=Please choose a correct answer
 loginFieldError.mail= Please enter your mail address
 loginFieldError.nak= Please enter a Nordakademie mail address
 loginFieldError.mailValid=Please enter a valid mail address
@@ -145,7 +147,6 @@ registrationFieldError.nakMail=Please enter a Nordakademie mail address
 registrationFieldError.mailRegistrated=This mail address is already registrated
 registrationFieldError.passwordLen=Please enter a password with at least 8 symbols
 registrationFieldError.passwordCriteria=Please choose a password, fulfilling at least 3 of the mentioned criterias
-
 questionType.single=one correct answer
 questionType.multiple=multiple correct answers
 questionType.cloze=cloze text
@@ -157,10 +158,14 @@ applicationAdministration.infoText=EN TEXT : Anschließend könenn Sie sich wie 
 home.title=Home
 seminarDetail.title=Seminar details
 seminarDetail.name=Seminar name
-seminarDetail.period=Startdate - Enddate
+seminarDetail.startdate=Startdate
+seminarDetail.enddate=Enddate
 seminarDetail.lecturer=Lecturer
 seminarDetail.description=Description
 seminarDetail.participants=Participants
 seminarDetail.noParticipants=No student is currently enrolled
 seminarDetail.enrolled=You are already enrolled
 seminarDetail.seminarFull=The seminar is full
+seminarDetail.firstName=Firstname
+seminarDetail.lastName=Lastname
+seminarDetail.number=Number
