--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -21,7 +21,8 @@ add-test.title=Create a Test
 edit-test.title=Edit a Test
 editTest.addQuestionButton=add question
 editTest.info=the test question could be add here.
-editTest.QuestionList=this are all existing questions for the test
+editTest.TableHeaderEdit=administrate question
+editTest.EditQuestionButton=edit question
 editTest.TableHeaderPos= question position
 editTest.TableHeaderText=question
 test.selectSeminar=Seminar
