add text to edit-test page if questionList ist empty

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -26,6 +26,7 @@ editTest.TableHeaderText=Frage
 editTest.TableHeaderEdit=Frage verwalten
 editTest.EditQuestionButton=Frage bearbeiten
 editTest.info=Die Fragen zum Test hinzuf&uuml;gen:
+editTest.emptyQuestionList=Bitte dr&uuml;cken Sie den Button, um die erste Frage zum Test hinzuzuf&uuml;gen
 test.selectSeminar=Seminar
 test.selectCredits=Credits
 test.selectStartdate=Startdatum
