--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -25,6 +25,7 @@ editTest.TableHeaderEdit=administrate question
 editTest.EditQuestionButton=edit question
 editTest.TableHeaderPos= question position
 editTest.TableHeaderText=question
+editTest.emptyQuestionList=Please press the button to add the first question to the test
 test.selectSeminar=Seminar
 test.selectCredits=Credits
 test.selectStartdate=Startdate
