Change design for Seminar detail page

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -173,3 +173,4 @@ seminarDetail.seminarFull=Das Seminar ist bereits voll
 seminarDetail.firstName=Vorname
 seminarDetail.lastName=Nachname
 seminarDetail.number=Nummer
+seminarDetail.enroll=Einschreiben
