--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -171,3 +171,4 @@ seminarDetail.seminarFull=The seminar is full
 seminarDetail.firstName=Firstname
 seminarDetail.lastName=Lastname
 seminarDetail.number=Number
+seminarDetail.enroll=Enroll
