Display number of participants in seminar list

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -174,3 +174,8 @@ seminarDetail.firstName=Vorname
 seminarDetail.lastName=Nachname
 seminarDetail.number=Nummer
 seminarDetail.enroll=Einschreiben
+seminarList.name=Seminar Name
+seminarList.period=Startdatum-Enddatum
+seminarList.lecturer=Dozent
+seminarList.participants=Teiln.
+seminarList.title=Seminar Liste
