--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -172,3 +172,8 @@ seminarDetail.firstName=Firstname
 seminarDetail.lastName=Lastname
 seminarDetail.number=Number
 seminarDetail.enroll=Enroll
+seminarList.name=Seminar name
+seminarList.period=Startdate-Enddate
+seminarList.lecturer=Lecturer
+seminarList.participants=Part.
+seminarList.title=Seminar list
