--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -62,6 +62,7 @@ addQuestion-form.points=Punktzahl
 addQuestion-form.question=Frage
 addQuestion-form.answer=Antwort
 addQuestion-form.position=Position
+addQuestion-form.gapExplaination=Füge Lücken mit [*] in den Fragetext ein
 frameHeader.systemName=Pr&uuml;fungssystem
 frameHeader.linkHome=Home
 frameHeader.linkSeminarlist=Seminar ausw&auml;hlen
@@ -107,8 +108,10 @@ impressum.phone=+49 (0)4121 4090-0
 impressum.fax=+49 (0)4121 4090-40
 impressum.mail=info@nordakademie.de
 impressum.web=http://www.nordakademie.de
+impressum.title=Impressum
 logout.info= Sie haben sich erfolgreich abgemeldet
 logout.seeyou= Bis bald!
+logout.title=Loqout
 registration.Step1=Herzlichen Glückwunsch! Sie haben den ersten Schritt zur Registrierung in der Seminarverwaltung der Nordakademie abgeschlossen!
 registration.email=Wir haben Ihnen einen Link zugeschickt. Öffnen Sie diesen bitte, um die Registrierung abzuschließen.
 question.single=Einfache Wahl
@@ -179,3 +182,11 @@ seminarList.period=Startdatum-Enddatum
 seminarList.lecturer=Dozent
 seminarList.participants=Teiln.
 seminarList.title=Seminar Liste
+performTest.title=Test durchführuen
+registration.title=Registrierung
+registration.error=Leider ist bei der Registrierung ein Fehler aufgetreten.
+registration.tryAgain=Bitte versuchen Sie es erneut.
+registration.successMessage=Herzlichen Glückwunsch! Sie haben den letzten Schritt zur Registrierung in der Seminarverwaltung der Nordakademie abgeschlossen!
+registration.loginReady=Sie können sich jetzt anmelden und den vollen Umfang der Seminare genießen.
+registration.identificationError=Leider konnten wir Sie nicht eindeutig identifizieren.
+registration.tryLink=Bitte kopieren Sie den Ihnen zugeschickten Link in den Browser und versuchen Sie es erneut.
