--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -61,6 +61,7 @@ addQuestion-form.points=Points
 addQuestion-form.question=Question
 addQuestion-form.answer=Answer
 addQuestion-form.position=Position
+addQuestion-form.gapExplaination=Add gaps as [*] in the question text
 frameHeader.systemName=Examinationsystem
 frameHeader.linkHome=Home
 frameHeader.linkSeminarlist=Choose Seminar
@@ -105,8 +106,10 @@ impressum.phone=+49 (0)4121 4090-0
 impressum.fax=+49 (0)4121 4090-40
 impressum.mail=info@nordakademie.de
 impressum.web=http://www.nordakademie.de
+impressum.title=Imprint
 logout.info= Your logout was successful
 logout.seeyou= See you soon!
+logout.title=Loqout
 registration.Step1=Congratulations! You finished the first step of registration
 registration.email=We have sent you an email. Please open the link to confirm your registration.
 question.single=Single Choice
@@ -177,3 +180,11 @@ seminarList.period=Startdate-Enddate
 seminarList.lecturer=Lecturer
 seminarList.participants=Part.
 seminarList.title=Seminar list
+performTest.title=Perform test
+registration.title=Registration
+registration.error=An error occured during registration.
+registration.tryAgain=Please try again.
+registration.successMessage=Congratulations! You finished the last step of registration for the seminar management tool of the Nordakademie!
+registration.loginReady=You are now able to login and enjoy the extent of our seminars.
+registration.identificationError=Unfortunately, we coulnd't identify you correctly.
+registration.tryLink=Please copy the link you received in the browser and try again.
