Add tooltip translation

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -18,6 +18,7 @@ home.tableHeaderName=Seminar-Name
 home.tableHeaderDate=Startdatum - Enddatum
 home.startTest= starte den Test
 home.AdministrateTest= Test verwalten
+home.noTest=Kein Test verfügbar
 add-test.title=Test Hinzuf&uuml;gen
 edit-test.title=Test editieren
 editTest.addQuestionButton=Fragen hinzuf&uuml;gen
