--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,6 +1,7 @@
 ####
 # Naming pattern: <PageName>.<loggedInState>.<messageDescriptor>
 ####
+global.notLoggedIn.info=This page is visbile for logged in users only. Please log in.
 global.notRegisteredYet=If you are not already registered, please click
 global.alreadyRegistered=If you are alreay registered, please click
 global.clickHereLink=here
@@ -17,6 +18,7 @@ home.tableHeaderName=name of seminar
 home.tableHeaderDate=start date - end date
 home.startTest= start test
 home.AdministrateTest= administrate test
+home.noTest=No test available
 add-test.title=Create a Test
 edit-test.title=Edit a Test
 editTest.addQuestionButton=add question
@@ -84,6 +86,7 @@ loginForm.instruction=Please log in.
 loginForm.eMail=e-Mail
 loginForm.password=Password
 notLoggedInErrorPage.title=Not logged in.
+notLoggedInErrorPage.info=This page is visible for logged in users only.
 alreadyLoggedInErrorPage.title=Already logged in.
 alreadyLoggedInErrorPage.info=You are already logged in.
 alreadyLoggedInErrorPage.linkToHomeText=If you want to go to the starting page, please click
