improve usability of add-question form
-add info texts depending on selected question type
-layout ( label: text align-left)

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -63,7 +63,11 @@ addQuestion-form.points=Points
 addQuestion-form.question=Question
 addQuestion-form.answer=Answer
 addQuestion-form.position=Position
-addQuestion-form.gapExplaination=Add gaps as [*] in the question text
+addQuestion.info=On this page you can add a question with its answer possibilities:
+addQuestion.gapInfo=mark gap as [*] in question text
+addQuestion.infoTextSingle=press "+" / "-" to add answer possibilites. Exactly one answer could be marked as correct.
+addQuestion.infoTextMultiple=press "+" / "-" to add answer possibilites. you can choose how many are correct.
+addQuestion.infoTextGap=the answerfields will be added automatically. First answerfield = first gap.
 frameHeader.systemName=Examinationsystem
 frameHeader.linkHome=Home
 frameHeader.linkSeminarlist=Choose Seminar
