--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -63,7 +63,12 @@ addQuestion-form.points=Punktzahl
 addQuestion-form.question=Frage
 addQuestion-form.answer=Antwort
 addQuestion-form.position=Position
-addQuestion-form.gapExplaination=Füge Lücken mit [*] in den Fragetext ein
+addQuestion.info=Hier erstellen Sie eine Frage mit den entsprechenden Antwortm&ouml;glichkeiten:
+addQuestion.gapInfo=L&uuml;cke als [*] in Fragentext kennzeichnen.
+
+addQuestion.infoTextSingle=F&uuml;gen Sie &uuml;ber die Button "+" / "-" Antwort-Optionen hinzu, wobei genau eine durch die Checkbox als richtig markiert werden darf
+addQuestion.infoTextMultiple=F&uuml;gen Sie &uuml;ber die Button "+" / "-" Antwort-Optionen hinzu, wobei beliebig viele Antworten richtig sein k&ouml;nnen
+addQuestion.infoTextGap=Es werden automatisch entsprechend der L&uuml;cken ([*])in Ihrem Text Antwortfelder angezeigt. 1. Antwortfeld = 1. L&uuml;cke im Text.
 frameHeader.systemName=Pr&uuml;fungssystem
 frameHeader.linkHome=Home
 frameHeader.linkSeminarlist=Seminar ausw&auml;hlen
