change layout and add explanation texts to editQuestion page

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -65,7 +65,7 @@ addQuestion-form.answer=Antwort
 addQuestion-form.position=Position
 addQuestion.info=Hier erstellen Sie eine Frage mit den entsprechenden Antwortm&ouml;glichkeiten:
 addQuestion.gapInfo=L&uuml;cke als [*] in Fragentext kennzeichnen.
-
+editQuestion.info=Hier k&ouml;nnen Sie die Frage und die Antwortm&ouml;glichkeiten bearbeiten:
 addQuestion.infoTextSingle=F&uuml;gen Sie &uuml;ber die Button "+" / "-" Antwort-Optionen hinzu, wobei genau eine durch die Checkbox als richtig markiert werden darf
 addQuestion.infoTextMultiple=F&uuml;gen Sie &uuml;ber die Button "+" / "-" Antwort-Optionen hinzu, wobei beliebig viele Antworten richtig sein k&ouml;nnen
 addQuestion.infoTextGap=Es werden automatisch entsprechend der L&uuml;cken ([*])in Ihrem Text Antwortfelder angezeigt. 1. Antwortfeld = 1. L&uuml;cke im Text.
