--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -68,6 +68,7 @@ addQuestion.gapInfo=mark gap as [*] in question text
 addQuestion.infoTextSingle=press "+" / "-" to add answer possibilites. Exactly one answer could be marked as correct.
 addQuestion.infoTextMultiple=press "+" / "-" to add answer possibilites. you can choose how many are correct.
 addQuestion.infoTextGap=the answerfields will be added automatically. First answerfield = first gap.
+editQuestion.info=On this page you can edit a question and its answer possibilities:
 frameHeader.systemName=Examinationsystem
 frameHeader.linkHome=Home
 frameHeader.linkSeminarlist=Choose Seminar
