--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -7,7 +7,7 @@ global.alreadyRegistered=Wenn Sie sich bereits registriert haben, klicken Sie bi
 global.clickHereLink=hier
 home.notLoggedIn.info=Herzlich Willkommen in der Seminarverwaltung der Nordakademie. Hier k&ouml;nnen Sie sich f&uuml;r Seminare einschreiben, Tests absolvieren und Ihre pers&ouml;nliche Creditpoints-Übersicht anzeigen.
 home.loggedIn.infoStudent=Hier sehen Sie eine Auflistung &uuml;ber alle Seminare, f&uuml;r die Sie eingeschrieben sind.
-home.loggedIn.testInfoStudent=Sobald ein Test zu einem Seminar freigeschaltet wird vom Dozenten, können Sie den Test über den erscheinenden Button starten.
+home.loggedIn.testInfoStudent=Sobald ein Test zu einem Seminar freigeschaltet wird vom Dozenten, k&ouml;nnen Sie den Test &uuml;ber den erscheinenden Button starten.
 home.loggedIn.emptyListStudent=Momentan sind Sie f&uuml;r kein Seminar angemeldet, schreiben Sie sich zunächst in einem Seminar ein.
 home.loggedIn.emptyListLecturer=Momentan sind für kein Seminar eingetragen, legen Sie zunächst ein Seminar an.
 home.StartTestButton=starte Test
