Update edit test and edit seminar
changes can't be made if seminar or test started

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -28,6 +28,8 @@ editTest.TableHeaderEdit=Frage verwalten
 editTest.EditQuestionButton=Frage bearbeiten
 editTest.info=Die Fragen zum Test hinzuf&uuml;gen:
 editTest.emptyQuestionList=Bitte dr&uuml;cken Sie den Button, um die erste Frage zum Test hinzuzuf&uuml;gen
+editTest.startedEmpty=Der Testzeitraum hat begonnen, Sie können keine Frage mehr hinzufügen
+editTest.tooltip=Der Testzeitraum hat bereits begonnen
 test.selectSeminar=Seminar
 test.selectCredits=Credits
 test.selectStartdate=Startdatum
@@ -148,6 +150,7 @@ persistTestFieldError.startInPast=Bitte geben Sie ein Startdatum in der Gegenwar
 persistTestFieldError.startBeforeEnd=Bitte geben Sie ein Enddatum nach dem Startdatum an
 persistTestFieldError.duration=Bitte geben Sie eine gültige Dauer an
 persistTestFieldError.minScore=Bitte geben Sie eine Mindestpunktzahl >0 an
+persistTestFieldError.seminarStart=Ein Test kann nicht vor dem Seminar starten
 registrationMail.subjectLine=Ihre Regestrierung am Nordakademie Seminartool
 registrationMail.textBeginning=<p>Vielen Dank für Ihre Regestrierung am Nordakademie Seminartool. Öffnen Sie biete den folgenden Link, um die Registierung abzuschließen</p>
 registrationMail.textEnding=<p>Wenn Sie denn Link nicht direkt öffnen können, versuchen Sie diesen in einen Browser zu kopieren.</p>
