--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -28,6 +28,8 @@ editTest.EditQuestionButton=edit question
 editTest.TableHeaderPos= question position
 editTest.TableHeaderText=question
 editTest.emptyQuestionList=Please press the button to add the first question to the test
+editTest.startedEmpty=The test period has already begun, you can't add any more questions
+editTest.tooltip=The test period already started
 test.selectSeminar=Seminar
 test.selectCredits=Credits
 test.selectStartdate=Startdate
@@ -148,6 +150,7 @@ persistTestFieldError.startInPast=Please enter start date, which is not in the p
 persistTestFieldError.startBeforeEnd=Please enter an end date following the start date
 persistTestFieldError.duration=Please enter a valid duration
 persistTestFieldError.minScore=Please enter a minimum score >0
+persistTestFieldError.seminarStart=A test can't start before the seminar started
 registrationMail.subjectLine=Your registration at the Nordakademie Seminartool
 registrationMail.textBeginning=<p>Thank you for registering at the Nordakademie Seminartool. Please open the following link to complete your registration</p>
 registrationMail.textEnding=<p>If you cant open the link directly, try to copy and paste it directly into your browser.</p>
