fix bug with edit seminar and test

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -65,6 +65,7 @@ addQuestion-form.points=Punktzahl
 addQuestion-form.question=Frage
 addQuestion-form.answer=Antwort
 addQuestion-form.position=Position
+addQuestion-form.submit=Hinzuf&uuml;gen
 addQuestion.info=Hier erstellen Sie eine Frage mit den entsprechenden Antwortm&ouml;glichkeiten:
 addQuestion.gapInfo=L&uuml;cke als [*] in Fragentext kennzeichnen.
 editQuestion.info=Hier k&ouml;nnen Sie die Frage und die Antwortm&ouml;glichkeiten bearbeiten:
