--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -65,6 +65,7 @@ addQuestion-form.points=Points
 addQuestion-form.question=Question
 addQuestion-form.answer=Answer
 addQuestion-form.position=Position
+addQuestion-form.submit=Submit
 addQuestion.info=On this page you can add a question with its answer possibilities:
 addQuestion.gapInfo=mark gap as [*] in question text
 addQuestion.infoTextSingle=press "+" / "-" to add answer possibilites. Exactly one answer could be marked as correct.
