delete "test verwalten" from frameHeader.ftl and add infotext to lecturer home.ftl

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -10,6 +10,7 @@ home.loggedIn.infoStudent=Hier sehen Sie eine Auflistung &uuml;ber alle Seminare
 home.loggedIn.testInfoStudent=Sobald ein Test zu einem Seminar freigeschaltet wird vom Dozenten, k&ouml;nnen Sie den Test &uuml;ber den erscheinenden Button starten.
 home.loggedIn.emptyListStudent=Momentan sind Sie f&uuml;r kein Seminar angemeldet, schreiben Sie sich zunächst in einem Seminar ein.
 home.loggedIn.emptyListLecturer=Momentan sind für kein Seminar eingetragen, legen Sie zunächst ein Seminar an.
+home.loggedIn.testInfoLecturer=Von hier gelangen Sie &uuml;ber die Buttons zu allen Seiten, die zum Verwalten von Tests und Seminaren gebraucht werden.
 home.StartTestButton=starte Test
 home.add-testButton=Test hinzuf&uuml;gen
 home.EditTestButton=Test bearbeiten
