--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -14,6 +14,7 @@ home.StartTestButton=start test
 home.add-testButton=add test
 home.EditTestButton=edit test
 home.loggedIn.infoLecturer=You can find a list of all Seminars for which you are Lecturer.
+home.loggedIn.testInfoLecturer=You are able to access every page you need for administrating your tests and seminars.
 home.tableHeaderName=name of seminar
 home.tableHeaderDate=start date - end date
 home.startTest= start test
