improve design of errorpages

--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -94,6 +94,7 @@ loginForm.welcomeText=Herzlich Willkommen auf dem Seminarportal der NORDAKADEMIE
 loginForm.instruction=Bitte melden Sie sich an.
 loginForm.eMail=E-Mail
 loginForm.password=Passwort
+global-errorPage.OPS=Oops
 notLoggedInErrorPage.title=Nicht angemeldet
 notLoggedInErrorPage.info=Diese Seite ist nur für angemeldete User sichtbar.
 alreadyLoggedInErrorPage.title=Bereits angemeldet.
