--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -94,6 +94,7 @@ loginForm.welcomeText=Welcome on the Seminar administration portal of the NORDAK
 loginForm.instruction=Please log in.
 loginForm.eMail=e-Mail
 loginForm.password=Password
+global-errorPage.OPS=Oops
 notLoggedInErrorPage.title=Not logged in.
 notLoggedInErrorPage.info=This page is visible for logged in users only.
 alreadyLoggedInErrorPage.title=Already logged in.
